<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainer"
        android:name="com.example.foodvenueapp.ui.venues.VenuesFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/venueDetailsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="venueDetailsLayout, venueDistanceLayout"
        tools:visibility="visible" />

    <include
        android:id="@+id/venueDetailsLayout"
        layout="@layout/list_item_venue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/venueDistanceLayout"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:background="@color/purple50Transparency"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/venueDetailsLayout"
        app:layout_constraintStart_toStartOf="@id/venueDetailsLayout"
        app:layout_constraintTop_toTopOf="@id/venueDetailsLayout">

        <TextView
            android:id="@+id/venueDistance"
            style="@style/VenueTextView.Distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="30" />

        <TextView
            android:id="@+id/distanceUnit"
            style="@style/VenueTextView.Distance.Unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>