<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray30Transparency"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:context=".ui.venues.VenuesFragment" />

    <TextView
        android:id="@+id/empty_venues_text"
        android:padding="@dimen/padding"
        android:background="@color/black"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAlignment="center"
        android:visibility="gone"
        android:text="@string/empty_venues_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</FrameLayout>